--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="es")
   head
-    link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="css/main.min.css")
 
   body
     p HAaaaaa
@@ -10,3 +10,4 @@ html(lang="es")
     p fdsioafjdsaio
     p lol
     
+    script(src="js/main.min.js")
