--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,10 +1,6 @@
 body
   color: white
   background: tomato
-html
-  background: blue
-h1
-  color: red
 
-*
-  color: red
+html
+  background: #000000
