Update style functions names and creates a custom task for Styles

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,6 +1,22 @@
 body
-  color: white
   background: tomato
+  color: white
 
 html
-  background: #000000
+  background: #000
+
+h1
+  font-size: 4em
+
+p
+  width: 3px
+
+  span
+    color: red
+
+    h1
+      display: flex
+      width: 3em
+
+h3
+      color: #fff
