Update Favicons task and Pug task

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,12 +2,9 @@ doctype html
 html(lang="es")
   head
     link(rel="stylesheet", href="css/main.min.css")
+    include _includes/head/index.pug
 
   body
-    p HAaaaaa
-    h1 perro
-    p fdsioafjdsaio
-    p fdsioafjdsaio
-    p lol
+    h1 Hello world!
     
     script(src="js/main.min.js")
