--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,10 +1,10 @@
 doctype html
 html(lang="es")
   head
-    link(rel="stylesheet", href="css/main.min.css")
+    link(rel="stylesheet", href="assets/styles/main.min.css")
     include _includes/head/index.pug
 
   body
     h1 Hello world!
-    
+    i.icon-search
     script(src="js/main.min.js")
