Add structure to sass files

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,3 +1,8 @@
-body
-  background: tomato
-  color: red
+// ==========================================================================
+// Here's the whole thing
+// ==========================================================================
+
+@import base/index
+@import layout/index
+@import modules/index
+@import state/index
