--- a/src/pug/_includes/head/meta.html
+++ b/src/pug/_includes/head/meta.html
@@ -1,4 +1,4 @@
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Open Graph data -->
     <meta property="og:title" content="" />
     <meta property="og:type" content="" />
