--- a/src/pug/_includes/head/favicons.html
+++ b/src/pug/_includes/head/favicons.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-icon" sizes="1024x1024" href="assets/images/site/apple-touch-icon-1024x1024.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="portfolio">
+<meta name="apple-mobile-web-app-title">
 <link rel="icon" type="image/png" sizes="228x228" href="assets/images/site/coast-228x228.png">
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <meta name="msapplication-TileImage" content="assets/images/site/mstile-144x144.png">
