Fix source maps sass files (separate css task for dev and prod)

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="es")
   head
-    link(rel="stylesheet", href="assets/styles/main.min.css")
+    link(rel="stylesheet" type="text/css" href="assets/styles/main.css")
     include _includes/head/index.pug
 
   body
