--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -2,20 +2,21 @@
 // Base (What's not in normalize, it's here)
 // ==========================================================================
 
-
 *
   margin: 0
   padding: 0
 
-
 html
   box-sizing: border-box
-*, *:before, *:after
+
+*,
+*::before,
+*::after
   box-sizing: inherit
 
 input
   border: 0
 
 a
-  text-decoration: none
   color: $black
+  text-decoration: none
