Fix font-face mixin errors

--- a/src/styles/base/_fonts.sass
+++ b/src/styles/base/_fonts.sass
@@ -2,4 +2,4 @@
 // This file contains the font-face declarations
 // -----------------------------------------------------------------------------
 
-@include font-face($folder__name: Merryweather, $name: Merryweather-Light, $weight: var(--font-weight-light), $ttf: true)
+@include font-face($folder-name: Merryweather, $name: Merryweather-Light, $weight: var(--font-weight-light), $ttf: true)
