--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -10,6 +10,7 @@
 @import 'abstracts/mixins/aspect-ratio'
 @import 'abstracts/mixins/ellipsis'
 @import 'abstracts/mixins/ellipsis-multiline'
+@import 'abstracts/mixins/font-face'
 @import 'abstracts/mixins/modular-scale'
 @import 'abstracts/mixins/underline'
 @import 'abstracts/mixins/transition'
