--- a/src/styles/abstracts/mixins/_modular-scale.sass
+++ b/src/styles/abstracts/mixins/_modular-scale.sass
@@ -3,8 +3,7 @@
 // -----------------------------------------------------------------------------
 // https://www.modularscale.com/?1&em&1.25
 
-@import ../../vendor/modular-scale/modularscale
-
+@import "../../../../node_modules/modularscale-sass/stylesheets/_modularscale.scss"
 $modularscale: (base: 1rem, ratio: 1.2)
 
 =heading-h1
