--- a/src/styles/abstracts/_variables.sass
+++ b/src/styles/abstracts/_variables.sass
@@ -25,10 +25,10 @@
   --animation-type-cubic: cubic-bezier(0, 0, 0.3, 1)
   --font-family-body-fallback: Arial, sans-serif
   --font-family-title-fallback: Georgia, sans-serif
-  --font-family-body-regular: 'Add', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif
+  --font-family-body-regular: 'Arimo-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif
   --font-family-body-italic: 'Add', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif
   --font-family-body-semibold: 'Add', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif
-  --font-family-title: 'Merryweather', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, serif
+  --font-family-title: 'Merriweather-Light', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, serif
   --font-family-code: 'Input', monospace
   --font-weight-thin: 100
   --font-weight-extralight: 200
@@ -41,9 +41,8 @@
   --font-weight-black: 900
   --scale: 1.25
   --font-base: 1rem
-  --letter-spacing: 0.05em
-  --font-path: "../fonts/"     // used in the font-face mixin (./source/sass/base/_mixins.sass)
-
+  --letter-spacing: 0.05em  
+  
   --space-xxs: calc(var(--font-base) / 8)   // 2px
   --space-xs: calc(var(--font-base) / 4)    // 4px
   --space-s: calc(var(--font-base) / 2)     // 8px
