--- a/src/styles/abstracts/mixins/_font-face.sass
+++ b/src/styles/abstracts/mixins/_font-face.sass
@@ -1,6 +1,8 @@
-@mixin font-face($folder-name, $name, $path: var(--font-path), $style: normal, $stretch: normal, $weight: normal, $ttf: null, $eot: null, $woff: null, $woff2: null, $svg: null)
+$font-path: "../fonts/"
+
+@mixin font-face($folder-name, $name, $path: $font-path, $style: normal, $stretch: normal, $weight: normal, $ttf: null, $eot: null, $woff: null, $woff2: null, $svg: null)
   @font-face
-    font-family: $folder-name
+    font-family: $name
 
     @if $eot
       src: url( $path + $folder-name + '/' + $name + '.eot')
