--- a/src/styles/base/_fonts.sass
+++ b/src/styles/base/_fonts.sass
@@ -2,4 +2,5 @@
 // This file contains the font-face declarations
 // -----------------------------------------------------------------------------
 
-@include font-face($folder-name: Merryweather, $name: Merryweather-Light, $weight: var(--font-weight-light), $ttf: true)
+@include font-face($folder-name: Merriweather, $name: Merriweather-Light, $weight: var(--font-weight-light), $ttf: true)
+@include font-face($folder-name: Arimo, $name: Arimo-Regular, $weight: var(--font-weight-normal), $ttf: true)
