Add fontfaceobserver package | necessary stuff

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,4 +10,5 @@ html(lang="es")
     main.main
       include _includes/body/footer.pug
     
-    script(src="assets/scripts/main.min.js")
+    script(src="assets/scripts/core.min.js")
+    script(src="assets/scripts/fontfaceobserver.min.js")
